--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="styles/emain-form.css">
     <link rel="stylesheet" href="styles/index-footer.css">
 </head>
+
 <body>
     <div id="top-nav">
         <div id="main-logo">
@@ -43,7 +45,9 @@
                 <span class="thin-header">Shift You Business Fast With</span>
                 <span class="bold-header">Ventures Guru</span>
             </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat ultrices. Nam aliquam sapien quis lorem ullamcorper facilisis. Etiam bibendum enim dapibus tellus porta convallis. Duis maximus porta lorem,</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat ultrices. Nam
+                aliquam sapien quis lorem ullamcorper facilisis. Etiam bibendum enim dapibus tellus porta convallis.
+                Duis maximus porta lorem,</p>
             <button id="topics-button">Topics&nbsp;<span>&#187;</span></button>
         </div>
     </header>
@@ -58,7 +62,8 @@
                     <div id="personal-finance">
                         <img src="images/category-images/personal-finance.png" alt="personal-finance">
                         <h4>Personal Finance</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat ultrices.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat
+                            ultrices.</p>
                         <a class="learn-more" href="#">Learn More</a>
                     </div>
                 </section>
@@ -66,7 +71,8 @@
                     <div id="business-ventures">
                         <img src="images/category-images/business&ventures.png" alt="business-ventures">
                         <h4>Business &amp; Ventures</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat ultrices.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat
+                            ultrices.</p>
                         <a class="learn-more" href="#">Learn More</a>
                     </div>
                 </section>
@@ -74,8 +80,9 @@
                     <div id="investments">
                         <img src="images/category-images/investments.png" alt="investments">
                         <h4>Investments</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat ultrices.</p>
-                            <a class="learn-more" href="#">Learn More</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consequat placerat
+                            ultrices.</p>
+                        <a class="learn-more" href="#">Learn More</a>
                     </div>
                 </section>
             </div>
@@ -126,32 +133,32 @@
     <footer>
         <div id="footer-content">
 
-                <div id="footer-nav">
-                    <ul id="footer-company">
-                        <li><a href="#" class="footer-nav-header">Company</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">FAQ</a></li>
-                    </ul>
-                    <ul id="footer-services">
-                        <li><a href="#" class="footer-nav-header">Services</a></li>
-                        <li><a href="#">Personal Finnace</a></li>
-                        <li><a href="#">Business &amp; Ventures</a></li>
-                        <li><a href="#">Investments</a></li>
-                    </ul>
-                    <ul id="footer-legal">
-                        <li><a href="#" class="footer-nav-header">Legal</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms &amp; Conditions</a></li>
-                        <li><a href="#">Licence</a></li>
-                    </ul>
-                    <ul id="footer-contact-us">
-                        <li><a href="#" class="footer-nav-header">Contact Us</a></li>
-                        <li><a href="mailto:info@venturesguru.com">info@venturesguru.com</a></li>
-                        <li><a href="tel:+17189133383">1(718)913-3383</a></li>
-                    </ul>
-                </div>
-            
+            <div id="footer-nav">
+                <ul id="footer-company">
+                    <li><a href="#" class="footer-nav-header">Company</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+                <ul id="footer-services">
+                    <li><a href="#" class="footer-nav-header">Services</a></li>
+                    <li><a href="#">Personal Finnace</a></li>
+                    <li><a href="#">Business &amp; Ventures</a></li>
+                    <li><a href="#">Investments</a></li>
+                </ul>
+                <ul id="footer-legal">
+                    <li><a href="#" class="footer-nav-header">Legal</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms &amp; Conditions</a></li>
+                    <li><a href="#">Licence</a></li>
+                </ul>
+                <ul id="footer-contact-us">
+                    <li><a href="#" class="footer-nav-header">Contact Us</a></li>
+                    <li><a href="mailto:info@venturesguru.com">info@domain.ext</a></li>
+                    <li><a href="tel:+17189133383">1(234)567-8901</a></li>
+                </ul>
+            </div>
+
             <div id="footer-logo">
                 <img src="images/index logo/polygon-icon-main.svg" alt="polygon-icon-main">
                 <h2>
@@ -162,23 +169,23 @@
 
             <hr>
             <div id="footer-socials">
-                <div id="all-rights-reserved">&copy; 2021 Copyright; All Rights Reserved</div>
+                <div id="all-rights-reserved">&copy; 2022 Copyright; All Rights Reserved</div>
                 <div id="social">
-                        <a href="#" class="twitter">
-                            <img src="images/social-icons/twitter.svg" alt="twitter icon">
-                        </a>
-                        <a href="#" class="linkedin">
-                            <img src="images/social-icons/linkedin.svg" alt="linkedin icon">
-                        </a>
-                        <a href="#" class="instagram">
-                            <img src="images/social-icons/instagram.svg" alt="instagram icon">
-                        </a>
-                        <a href="#" class="email">
-                            <img src="images/social-icons/email.svg" alt="email icon">
-                        </a>
-                        <a href="#" class="whatsapp">
-                            <img src="images/social-icons/whatsapp.svg" alt="whatsapp icon">
-                        </a>
+                    <a href="#" class="twitter">
+                        <img src="images/social-icons/twitter.svg" alt="twitter icon">
+                    </a>
+                    <a href="#" class="linkedin">
+                        <img src="images/social-icons/linkedin.svg" alt="linkedin icon">
+                    </a>
+                    <a href="#" class="instagram">
+                        <img src="images/social-icons/instagram.svg" alt="instagram icon">
+                    </a>
+                    <a href="#" class="email">
+                        <img src="images/social-icons/email.svg" alt="email icon">
+                    </a>
+                    <a href="#" class="whatsapp">
+                        <img src="images/social-icons/whatsapp.svg" alt="whatsapp icon">
+                    </a>
                 </div>
             </div>
         </div>
@@ -189,4 +196,5 @@
     <script src="scripts/load-class.js"></script>
     <script src="scripts/mobile-menu.js"></script>
 </body>
+
 </html>
